feat(docs): 新增迁移指南与欢迎页面，重构导航结构
- 新增从 Word 和 LaTeX 迁移的完整指南文档
- 创建新的欢迎页面作为文档站入口
- 重构导航结构：将"快速开始"改为"欢迎来到 Typst"
- 新增迁移指南目录及对应导航项
- 更新首页描述，移除"非官方"标识
- 新增教程章节的快速开始文档
- 添加相关配图资源

BREAKING CHANGE: 导航路径变更，/quickstart 重定向至 /welcome

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,15 +1,15 @@
 ---
 title: 欢迎来到 Typst
-description: Typst 中文文档站（非官方）
+description: Typst 中文文档站
 template: splash
 hero:
-  tagline: Typst 中文文档站（非官方）
+  tagline: Typst 中文文档站
   image:
     file: ../../assets/Typst.svg
     alt: Typst Logo
   actions:
-    - text: 快速开始
-      link: /quickstart/
+    - text: 梦开始的地方
+      link: /welcome/
       icon: right-arrow
     - text: 官方文档站（英文）
       link: https://typst.app/docs/
@@ -52,3 +52,11 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	</Card>
 	
 </CardGrid>
+
+---
+
+## 致谢
+
+本站主体部分是由 [Typst 官方文档](https://typst.app/docs/) 翻译而来，感谢 Typst 官方团队的辛勤工作。
+
+本站部分文章转载自 [Typst 中文社区导航](https://typst-doc-cn.github.io/guide/)，感谢社区成员的贡献。
